--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 header {
 background-color: #F07917;
 }
+
+aside {
+  background: #F4A15C;
+}
+
+article {
+  background: #FAD6B9;
+}
+  
+footer {
+    background:#F6AE73;
+}
+  
+
+
