--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ main {
   display: grid;
   gird-templates-areas:
     'aside article article'
-    ;aside footer footer;
+    'aside footer footer';
     grid-gap:30px;
   
   
