--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ background-color: #F07917;
 background-size: cover;
   background-attachment: fixed;
   background-position:center;
-  height: 100%
+  height: 100%;
 }
 
 main {
