--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header {
 background-color: #F07917;
-  background-image; url("https://images.unsplash.com/photo-1501746877-14782df58970?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80");
+  background-image: url("https://images.unsplash.com/photo-1501746877-14782df58970?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80");
 background-size: cover;
   background-attachment: fixed;
   background-position:center;
